--- a/ParamAssign/test-output/old/Default suite/classes.html
+++ b/ParamAssign/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.param.qa.testcases.SignUpPageTestCase</td>
+<td>com.param.qa.testcases.ProfileDataFillTestCase</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySignUpPage</td>
+<td>profileFillTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
