--- a/ParamAssign/test-output/old/Default suite/methods-alphabetical.html
+++ b/ParamAssign/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97c064">  <td>19/06/07 13:12:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpPageTestCase.setUp()[pri:0, instance:com.param.qa.testcases.SignUpPageTestCase@26653222]">&gt;&gt;setUp</td> 
+<tr bgcolor="97c064">  <td>19/06/12 18:51:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProfileDataFillTestCase.setUp()[pri:0, instance:com.param.qa.testcases.ProfileDataFillTestCase@26653222]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/06/07 13:13:21</td>   <td>26442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SignUpPageTestCase.tearDown()[pri:0, instance:com.param.qa.testcases.SignUpPageTestCase@26653222]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/06/07 13:13:13</td>   <td>18384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpPageTestCase.verifySignUpPage()[pri:0, instance:com.param.qa.testcases.SignUpPageTestCase@26653222]">verifySignUpPage</td> 
-  <td>main@1225439493</td>   <td></td> </tr>
 </table>
